Display card for asset details

--- a/src/app/pages/asset-details/asset-details-view/asset-details-view.component.html
+++ b/src/app/pages/asset-details/asset-details-view/asset-details-view.component.html
@@ -27,9 +27,8 @@
     </div>
 
     <div class="row">
-
         <div class="col-md-12 col-lg-12 col-sm-12">
-            <nb-card>
+            <nb-card accent="primary">
                 <ngx-asset-details-form [form]="form"></ngx-asset-details-form>
                 <hr>
                 <div class="row">
