--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -1,4 +1,5 @@
 <div class="col-md-12 col-lg-12 col-sm-12">
+    <!--ACTION BUTTONS-->
     <div class="row">
         <button (click)="onClickHome()"
                 ghost size="small" status="primary"
@@ -27,7 +28,7 @@
     </div>
     <div class="row">
         <div class="col-md-12 col-lg-12 col-sm-12">
-            <nb-card>
+            <nb-card accent="primary">
                 <nb-tabset fullWidth>
                     <!--MPAN DETAILS-->
                     <nb-tab tabTitle="MPAN Details" tabIcon="file-text-outline" responsive>
