--- a/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
+++ b/src/app/pages/mpandetails/mpan-details-search/mpan-details-search.component.html
@@ -17,49 +17,20 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <nb-card accent="danger" size="large"
+        <nb-card accent="danger"
                  [nbSpinner]="spinner_loading"
                  nbSpinnerStatus="danger"
-                 nbSpinnerSize="large">
+                 nbSpinnerSize="large"
+                 fullWidth>
             <nb-card-header>
-                <h6 class="text-muted"> search results .. </h6>
+                <h5 class="text-muted"> Search results .. </h5>
+                <div class="font-italic text-danger" *ngIf="noSearchResultReturned">
+                    No matching results found please try with different search text ..</div>
             </nb-card-header>
-            <nb-card-body>
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                    <nb-list>
-                        <nb-list-item class="" *ngIf="searchResultVisible">
-                            <div class="row">
-                                <span class="col-md-4"> MPAN </span>
-                                <span class="col-md-4"> METER ID </span>
-                                <span class="col-md-4"> ADDRESS </span>
-                            </div>
-                        </nb-list-item>
-                        <nb-list-item class="" *ngFor="let mpan of searchMpanResults.mpans">
-                            <div class="row">
-                                <span class="col-md-4">
-                                    <a class="hvr-grow"
-                                       [routerLink]="'./' + mpan.id"
-                                       routerLinkActive="active">
-                                        <span>
-                                            <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
-                                            {{ 'MPAN ID -- ' + mpan.id }}
-                                        </span>
-                                    </a>
-                                </span>
-                                <span class="col-md-4" *ngIf="mpan.meter">
-                                    <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
-                                    {{ mpan.meter.meter_fk }}
-                                </span>
-                                <span class="col-md-4" *ngIf="mpan.mpan_address">
-                                    <nb-icon icon="arrow-right" pack="eva" status="warning"></nb-icon>
-                                    {{ mpan.mpan_address.address_1 + ', '
-                                     + mpan.mpan_address.address_2 + ', '
-                                     + mpan.mpan_address.post_code }}
-                                </span>
-                            </div>
-                        </nb-list-item>
-                    </nb-list>
-                </div>
+
+            <nb-card-body *ngIf="searchResultVisible">
+                <ng2-smart-table [settings]="mpanTableSettings" [source]="mpanDataSource">
+                </ng2-smart-table>
             </nb-card-body>
         </nb-card>
     </div>
