Edit form should highlight editable fields

--- a/src/app/@common-components/forms/address-form/address-form.component.html
+++ b/src/app/@common-components/forms/address-form/address-form.component.html
@@ -1,19 +1,20 @@
 <form class="form-inline" [formGroup]="form">
     <div class="col-md-12">
         <!--ADDRESS LINES-->
-        <div class="row">
-            <div class="form-group col-md-9">
-                <label class="label col-sm-3 col-form-label">Address Type</label>
-                <div class="col-sm-9">
-                    <input type="text"
-                           class="input-full-width size-medium shape-rectangle"
-                           nbInput fullWidth
-                           [readonly]="isReadOnly"
-                           placeholder="Address Type.."
-                           formControlName="address_type">
-                </div>
-            </div>
-        </div>
+        <!--<div class="row">-->
+        <!--<div class="form-group col-md-9">-->
+        <!--<label class="label col-sm-3 col-form-label">Address Type</label>-->
+        <!--<div class="col-sm-9">-->
+        <!--<input type="text"-->
+        <!--class="input-full-width size-medium shape-rectangle"-->
+        <!--nbInput fullWidth-->
+        <!--[readonly]="isReadOnly"-->
+        <!--placeholder="Address Type.."-->
+        <!--formControlName="address_type"-->
+        <!--[status]="getFieldStatus('address_type')">-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
         <div class="row">
             <div class="form-group col-md-9">
                 <label class="label col-sm-3 col-form-label">line 1</label>
@@ -23,7 +24,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_1">
+                           formControlName="address_1"
+                           [status]="getFieldStatus('address_1')">
                 </div>
             </div>
         </div>
@@ -36,7 +38,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_2">
+                           formControlName="address_2"
+                           [status]="getFieldStatus('address_2')">
                 </div>
             </div>
         </div>
@@ -49,7 +52,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_3">
+                           formControlName="address_3"
+                           [status]="getFieldStatus('address_3')">
                 </div>
             </div>
         </div>
@@ -62,7 +66,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_4">
+                           formControlName="address_4"
+                           [status]="getFieldStatus('address_4')">
                 </div>
             </div>
         </div>
@@ -75,7 +80,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_5">
+                           formControlName="address_5"
+                           [status]="getFieldStatus('address_5')">
                 </div>
             </div>
         </div>
@@ -88,7 +94,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_6">
+                           formControlName="address_6"
+                           [status]="getFieldStatus('address_6')">
                 </div>
             </div>
         </div>
@@ -101,7 +108,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_7">
+                           formControlName="address_7"
+                           [status]="getFieldStatus('address_7')">
                 </div>
             </div>
         </div>
@@ -114,7 +122,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_8">
+                           formControlName="address_8"
+                           [status]="getFieldStatus('address_8')">
                 </div>
             </div>
         </div>
@@ -127,7 +136,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="address_9">
+                           formControlName="address_9"
+                           [status]="getFieldStatus('address_9')">
                 </div>
             </div>
         </div>
@@ -140,7 +150,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="post_code">
+                           formControlName="post_code"
+                           [status]="getFieldStatus('post_code')">
                 </div>
             </div>
         </div>
@@ -154,7 +165,8 @@
                            nbInput fullWidth
                            [readonly]="isReadOnly"
                            placeholder=""
-                           formControlName="effective_from">
+                           formControlName="effective_from"
+                           [status]="getFieldStatus('effective_from')">
                 </div>
             </div>
         </div>
