--- a/src/app/pages/asset-details/asset-details-search/asset-details-search.component.html
+++ b/src/app/pages/asset-details/asset-details-search/asset-details-search.component.html
@@ -7,8 +7,8 @@
                         <nb-search type="rotate-layout"
                                    tag="asset-details-search"
                                    placeholder="search asset details .."
-                                   hint="By ID/ "></nb-search>
-                        <i class="title offset-2">Search for asset details ..</i>
+                                   hint="By ID/ Ref #/"></nb-search>
+                        <i class="title offset-2">Search asset details ..</i>
                     </div>
                 </div>
             </nb-card-body>
@@ -17,47 +17,20 @@
 </div>
 <div class="row">
     <div class="col-md-12">
-        <nb-card accent="danger" size="large"
+        <nb-card accent="danger"
                  [nbSpinner]="spinner_loading"
                  nbSpinnerStatus="danger"
                  nbSpinnerSize="large">
             <nb-card-header>
-                <h6 class="text-muted"> search results .. </h6>
-            </nb-card-header>
-            <nb-card-body>
-                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
-                    <nb-list>
-                        <nb-list-item class="" *ngIf="searchResultVisible">
-                            <div class="row">
-                                <span class="col-md-4"> ASSET </span>
-                                <span class="col-md-4"> BUSINESS REF ID </span>
-                                <span class="col-md-4"> DESCRIPTION </span>
-                            </div>
-                        </nb-list-item>
-                        <nb-list-item class="" *ngFor="let asset of searchResults.result">
-                            <div class="row">
-                                <span class="col-md-4">
-                                    <a class="hvr-grow"
-                                       [routerLink]="'./' + asset.id"
-                                       routerLinkActive="active">
-                                        <span>
-                                            <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
-                                            {{ 'ASSET REF ID -- ' + asset.id }}
-                                        </span>
-                                    </a>
-                                </span>
-                                <span class="col-md-4">
-                                    <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
-                                    {{ asset.business_reference }}
-                                </span>
-                                <span class="col-md-4">
-                                    <nb-icon icon="arrow-right" pack="eva" status="warning"></nb-icon>
-                                    {{ asset.description }}
-                                </span>
-                            </div>
-                        </nb-list-item>
-                    </nb-list>
+                <h5 class="text-muted"> Search results .. </h5>
+                <div class="font-italic text-danger" *ngIf="noSearchResultReturned">
+                    No matching results found please try with different search text ..
                 </div>
+            </nb-card-header>
+
+            <nb-card-body *ngIf="searchResultVisible">
+                <ng2-smart-table [settings]="assetTableSettings" [source]="assetDataSource">
+                </ng2-smart-table>
             </nb-card-body>
         </nb-card>
     </div>
