--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -8,4 +8,12 @@
       right: 0.41rem !important;
     }
   }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(63, 63, 191, 0.34) !important;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0.4rem !important;
+  }
 }
