Save mpan details with ASC and Address changes

--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -674,7 +674,7 @@
                     <nb-tab tabTitle="ASSET Details" tabIcon="file-text-outline" responsive>
                         <ngx-asset-details-form
                                 [form]="form.get('asset')"
-                                [isReadOnly]="!isFormEditable"></ngx-asset-details-form>
+                                [isReadOnly]="true"></ngx-asset-details-form>
                         <hr>
                         <!--RELATED MPANS-->
                         <div class="row">
