--- a/src/app/pages/mpandetails/bulk-import/bulk-import.component.html
+++ b/src/app/pages/mpandetails/bulk-import/bulk-import.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-10">
         <nb-card [nbSpinner]="spinner_loading"
                  nbSpinnerStatus="danger">
             <nb-card-header>
                 <h1 class="text-primary">BULK UPLOAD MPAN(s)</h1>
             </nb-card-header>
-            <nb-card-body class="">
+            <nb-card-body>
                 <div class="row">
                     <input #inputFile type="file"
                            (change)="fileChange($event)"
@@ -28,41 +28,29 @@
                     </button>
                 </div>
                 <hr>
+<!--                <div class="row">-->
+<!--                    <div class="font-italic text-danger" *ngIf="displayErr">-->
+<!--                        Error on import : {{serverResponse.message}}-->
+<!--                    </div>-->
+<!--                    <div class="font-italic text-success" *ngIf="displayMpans">-->
+<!--                        Import Successful: {{serverResponse.message}}-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="row">
-                    <div class="font-italic text-danger" *ngIf="displayErr">
-                         Error on import : {{serverResponse.message}}
-                    </div>
-                    <div class="font-italic text-success" *ngIf="displayMpans">
-                        Import Successful: {{serverResponse.message}}
-                    </div>
+                    <nb-progress-bar [value]="progress_value" status="info">{{progress_text}}</nb-progress-bar>
                 </div>
             </nb-card-body>
         </nb-card>
     </div>
 </div>
-<div class="row" *ngIf="displayMpans">
+<div class="row">
     <div class="col-md-12">
-        <nb-card accent="success" fullWidth>
+        <nb-card accent="info" fullWidth>
             <nb-card-header>
-                Import MPAN Details
+                Bulk Import Tasks
             </nb-card-header>
-
             <nb-card-body>
-                <ng2-smart-table [settings]="mpanTableSettings" [source]="mpansDatasource">
-                </ng2-smart-table>
-            </nb-card-body>
-        </nb-card>
-    </div>
-</div>
-<div class="row" *ngIf="displayErr">
-    <div class="col-md-12">
-        <nb-card accent="danger" fullWidth>
-            <nb-card-header>
-                Error(s) in MPAN Import
-            </nb-card-header>
-
-            <nb-card-body>
-                <ng2-smart-table [settings]="errTableSettings" [source]="errDatasource">
+                <ng2-smart-table [settings]="tasksTableSettings" [source]="tasksDatasource">
                 </ng2-smart-table>
             </nb-card-body>
         </nb-card>
