--- a/src/app/pages/mpandetails/bulk-import-result/bulk-import-result.component.html
+++ b/src/app/pages/mpandetails/bulk-import-result/bulk-import-result.component.html
@@ -18,7 +18,12 @@
         <div class="col-md-12">
             <nb-card accent="success" fullWidth>
                 <nb-card-header>
-                    Successfully Imported New MPAN(s)
+                    <span class="font-weight-bolder text-success">
+                        {{'TASK ' + (routed_id$ | async) }}
+                    </span>
+                    <span class="font-weight-lighter">
+                        Successfully Imported New MPAN(s)
+                    </span>
                 </nb-card-header>
                 <nb-card-body>
                     <ng2-smart-table [settings]="mpanTableSettings" [source]="mpansDatasource">
@@ -31,7 +36,12 @@
         <div class="col-md-12">
             <nb-card accent="danger" fullWidth>
                 <nb-card-header>
-                    Error(s) in MPAN Import
+                    <span class="font-weight-bolder text-danger">
+                        {{'TASK ' + (routed_id$ | async) }}
+                    </span>
+                    <span class="font-weight-lighter">
+                        Error(s) in MPAN Import
+                    </span>
                 </nb-card-header>
 
                 <nb-card-body>
