--- a/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
+++ b/src/app/pages/mpandetails/mpan-details-form/mpan-details-form.component.html
@@ -25,6 +25,12 @@
             <nb-icon icon="refresh-outline" status="primary"></nb-icon>
             Reset
         </button>
+        <button (click)="openLlfcDialog()"
+                ghost size="small" status="primary"
+                class="hvr-bob" nbButton>
+            <nb-icon icon="alert-triangle-outline" status="danger"></nb-icon>
+            LLFC
+        </button>
         <nb-checkbox [(checked)]="isFormEditable" status="primary">
             Edit Details
         </nb-checkbox>
@@ -103,7 +109,9 @@
                                 <!--THIRD ROW - LLFC DETAILS-->
                                 <div class="row" [formGroup]="form.get('llfc')">
                                     <div class="form-group col-md-6">
-                                        <label class="label col-sm-3 col-form-label">
+                                        <label class="label col-sm-3 col-form-label"
+                                               (click)="openLlfcDialog()">
+                                            <span><nb-icon status="danger" icon="alert-triangle-outline" pack="eva"></nb-icon></span>
                                             {{formFieldAttributes['llfc.line_loss_factor_class_fk'].label}}</label>
                                         <div class="col-sm-9">
                                             <input type="text"
@@ -274,7 +282,7 @@
                                         <nb-tab tabTitle="Metering Point Address">
                                             <ngx-address-form
                                                     [form]="form.get('mpan_address')"
-                                                    [(isReadOnly)]="!isFormEditable"></ngx-address-form>
+                                                    [isReadOnly]="!isFormEditable"></ngx-address-form>
                                         </nb-tab>
                                         <nb-tab tabTitle="Mailing Address">
                                             <ngx-address-form
@@ -706,13 +714,13 @@
                                     </span>
                                             <span class="col-md-4" *ngIf="mpan.meter">
                                         <nb-icon icon="arrow-right" pack="eva" status="info"></nb-icon>
-                                        {{ mpan.meter.meter_fk }}
+                                                {{ mpan.meter.meter_fk }}
                                     </span>
                                             <span class="col-md-4" *ngIf="mpan.mpan_address">
                                         <nb-icon icon="arrow-right" pack="eva" status="warning"></nb-icon>
-                                        {{ mpan.mpan_address.address_1 + ', '
-                                         + mpan.mpan_address.address_2 + ', '
-                                         + mpan.mpan_address.post_code }}
+                                                {{ mpan.mpan_address.address_1 + ', '
+                                            + mpan.mpan_address.address_2 + ', '
+                                            + mpan.mpan_address.post_code }}
                                     </span>
                                         </div>
                                     </nb-list-item>
