--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,25 +1,37 @@
 <div class="header-container">
-    <div class="logo-container">
-        <a (click)="toggleSidebar()" href="#" class="sidebar-toggle hvr-float-shadow">
-            <nb-icon icon="menu-2-outline"></nb-icon>
-        </a>
-    </div>
-</div>
-<div class="header-container">
-    <a class="logo text-info hvr-float-shadow" href="#" (click)="navigateHome()">
-        <nb-icon icon="flash-outline" status="success"></nb-icon>
-        LDSO<span class="text-primary">-OnCloud </span>
+  <div class="logo-container">
+    <a
+      (click)="toggleSidebar()"
+      href="#"
+      class="sidebar-toggle hvr-float-shadow"
+    >
+      <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
+  </div>
 </div>
 <div class="header-container">
-    <nb-actions size="small">
-        <nb-action class="control-item hvr-float-shadow" icon="email-outline"></nb-action>
-        <nb-action class="user-action hvr-float-shadow" *nbIsGranted="['view', 'user']">
-            <nb-user [nbContextMenu]="userMenu"
-                     [onlyPicture]="userPictureOnly"
-                     [name]="user?.name"
-                     [picture]="user?.picture">
-            </nb-user>
-        </nb-action>
-    </nb-actions>
+  <a class="logo text-info hvr-float-shadow" href="#" (click)="navigateHome()">
+    <nb-icon icon="flash-outline" status="success"></nb-icon>
+    Infinity
+  </a>
+</div>
+<div class="header-container">
+  <nb-actions size="small">
+    <nb-action
+      class="control-item hvr-float-shadow"
+      icon="email-outline"
+    ></nb-action>
+    <nb-action
+      class="user-action hvr-float-shadow"
+      *nbIsGranted="['view', 'user']"
+    >
+      <nb-user
+        [nbContextMenu]="userMenu"
+        [onlyPicture]="userPictureOnly"
+        [name]="user?.name"
+        [picture]="user?.picture"
+      >
+      </nb-user>
+    </nb-action>
+  </nb-actions>
 </div>
