--- a/src/app/pages/customer/customer.component.scss
+++ b/src/app/pages/customer/customer.component.scss
@@ -8,3 +8,11 @@
     border-radius: 5px;
   }
 }
+
+.edit {
+  position: absolute;
+  right: 1px;
+  background-color: white;
+  top: 1px;
+  width: 40vw;
+}
