--- a/src/app/pages/customer/edit/edit.component.html
+++ b/src/app/pages/customer/edit/edit.component.html
@@ -1,7 +1,9 @@
 <nb-layout>
   <nb-layout-header>
-    edit customer details
-    <nb-menu [items]="items"></nb-menu>
+    <div class="edit-header">
+      Edit customer details
+      <nb-menu [items]="items" class="edit-close"></nb-menu>
+    </div>
   </nb-layout-header>
 
   <nb-layout-column>
