--- a/src/app/pages/customer/customer.component.scss
+++ b/src/app/pages/customer/customer.component.scss
@@ -6,6 +6,12 @@
     border: 1px solid black;
     padding: 10px;
     border-radius: 5px;
+    margin-top: 12px;
+    font-size: small;
+
+    span {
+      margin-right: 6px;
+    }
   }
 }
 
