--- a/src/app/pages/customer/customer.component.html
+++ b/src/app/pages/customer/customer.component.html
@@ -7,25 +7,59 @@
 
 <div class="customer-detail">
   <nb-card>
-    <nb-card-body>
-      <h6>Customer details</h6>
-      <span>name</span><br />
-      <span>Customer ID</span>
-      <div class="tags">
-        <span>Tags#</span>
-        <span>Tags2#</span>
-      </div>
-    </nb-card-body>
+    <div class="details-card">
+      <nb-card-body>
+        <h6>Customer details</h6>
+
+        <div class="c-detail-container">
+          <div class="c-detail-item">
+            <div class="c-detail-item-title">name</div>
+            <div class="c-detail-item-value">John Doe</div>
+          </div>
+          <div class="c-detail-item">
+            <div class="c-detail-item-title">Customer ID</div>
+            <div class="c-detail-item-value">FKDD5824SH</div>
+          </div>
+          <div class="c-detail-item">
+            <div class="c-detail-item-title">Company Name</div>
+            <div class="c-detail-item-value">BBC.corp</div>
+          </div>
+          <div class="c-detail-item">
+            <div class="c-detail-item-title">Company Type</div>
+            <div class="c-detail-item-value">Media</div>
+          </div>
+        </div>
+
+        <div class="tags">
+          <span>Tags#</span>
+          <span>Tags2#</span>
+        </div>
+      </nb-card-body>
+    </div>
   </nb-card>
+
   <nb-card>
-    <nb-card-body>
-      <h6>Account details</h6>
-    </nb-card-body>
+    <div class="details-card">
+      <nb-card-body>
+        <h6>Service details</h6>
+        <div class="c-detail-item">
+          <div class="c-detail-item-title">Solar</div>
+          <div class="c-detail-item-value">Rajastan</div>
+        </div>
+        <div class="c-detail-item">
+          <div class="c-detail-item-title">Wind</div>
+          <div class="c-detail-item-value">Gujarath</div>
+        </div>
+      </nb-card-body>
+    </div>
   </nb-card>
+
   <nb-card>
-    <nb-card-body>
-      <h6>Revenue details</h6>
-    </nb-card-body>
+    <div class="details-card">
+      <nb-card-body>
+        <h6>Revenue details</h6>
+      </nb-card-body>
+    </div>
   </nb-card>
 </div>
 
