--- a/src/app/pages/customer/customer.component.scss
+++ b/src/app/pages/customer/customer.component.scss
@@ -1,16 +1,47 @@
 .customer-detail {
   display: flex;
-  justify-content: space-between;
+
+  nb-card {
+    flex-grow: 1;
+    margin: 6px;
+    padding: 6px;
+
+    h6 {
+      text-transform: uppercase;
+      font-size: 12px;
+    }
+
+    .c-detail-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    .c-detail-item {
+      margin-bottom: 6px;
+
+      .c-detail-item-title {
+        text-transform: uppercase;
+        font-size: 8px;
+        font-weight: bold;
+      }
+
+      .c-detail-item-value {
+        text-transform: uppercase;
+        font-size: 12px;
+      }
+    }
+  }
 
   .tags {
     border: 1px solid black;
     padding: 10px;
     border-radius: 5px;
     margin-top: 12px;
-    font-size: small;
 
     span {
       margin-right: 6px;
+      text-transform: uppercase;
+      font-size: small;
     }
   }
 }
@@ -21,4 +52,9 @@
   background-color: white;
   top: 1px;
   width: 40vw;
+}
+
+.details-card {
+  flex-grow: 1;
+  margin: 6px;
 }
