--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,1 +1,16 @@
-<p>landing works!</p>
+<nb-search type="rotate-layout"></nb-search>
+<!-- <div *ngFor="let item of data">
+	<span>{{ item.customer_id }}</span>
+	<span>{{ item.name }}</span>
+</div> -->
+<nb-list>
+	<nb-list-item *ngFor="let item of data">
+		<a [routerLink]="['customer']">
+			<div>
+				<span>{{ item.customer_id }}</span>
+				<span> &nbsp; </span>
+				<span>{{ item.name }}</span>
+			</div>
+		</a>
+	</nb-list-item>
+</nb-list>
