--- a/src/app/pages/customer/customer-search/customer-search.component.html
+++ b/src/app/pages/customer/customer-search/customer-search.component.html
@@ -6,7 +6,7 @@
                     <div (click)="onClickSearch($event)">
                         <nb-search type="rotate-layout"
                                    tag="customer-search"
-                                   placeholder="search MPAN .."
+                                   placeholder="search for customer .."
                                    hint="By ID/ Name/Wild Card "></nb-search>
                         <i class="title offset-2">Search for Customer ..</i>
                     </div>
