Customer details paged linked to router

--- a/src/app/pages/customer/customer-details/customer-details.component.scss
+++ b/src/app/pages/customer/customer-details/customer-details.component.scss
@@ -33,7 +33,7 @@
 	}
 
 	.tags {
-		border: 1px solid black;
+		border: 1px solid rgba(18, 247, 149, 0.12);
 		padding: 10px;
 		border-radius: 5px;
 		margin-top: 12px;
