--- a/src/app/pages/customer/customer-details/customer-details.component.html
+++ b/src/app/pages/customer/customer-details/customer-details.component.html
@@ -1,68 +1,128 @@
-<p>customer-details works!</p>
-
-<nb-search type="rotate-layout"></nb-search>
 <nb-card>
-	<nb-card-body>
-		<nb-menu [items]="items"></nb-menu>
-	</nb-card-body>
+    <nb-card-body>
+        <!--ACTION BUTTONS-->
+        <div class="row">
+            <button (click)="onClickHome()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="home-outline" status="primary"></nb-icon>
+                Home
+            </button>
+            <button (click)="onClickBack()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="arrowhead-left-outline" status="primary"></nb-icon>
+                Back
+            </button>
+            <button (click)="onEventClick()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="save-outline" status="danger"></nb-icon>
+                Save
+            </button>
+            <button (click)="onEventClick()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="refresh-outline" status="primary"></nb-icon>
+                Reset
+            </button>
+            <button (click)="onEventClick()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="expand-outline" status="danger"></nb-icon>
+                Edit Customer
+            </button>
+            <button (click)="onEventClick()"
+                    ghost size="small" status="primary"
+                    class="hvr-bob" nbButton>
+                <nb-icon icon="expand-outline" status="danger"></nb-icon>
+                Edit Payment
+            </button>
+        </div>
+
+    </nb-card-body>
 </nb-card>
 
 <div class="customer-detail">
-	<nb-card>
-		<div class="details-card">
-			<nb-card-body>
-				<h6>Customer details</h6>
+    <nb-card>
+        <nb-card-header>
+            <h6 class="text-primary">Customer</h6>
+        </nb-card-header>
+        <div class="details-card">
+            <nb-card-body>
+                <div class="c-detail-container">
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">name</div>
+                        <div class="c-detail-item-value">{{customerDetails.full_name}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Customer ID</div>
+                        <div class="c-detail-item-value text-primary">{{customerDetails.customer_id}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Company Name</div>
+                        <div class="c-detail-item-value">{{customerDetails.company_name}}</div>
+                    </div>
+                    <div class="c-detail-item">
+                        <div class="c-detail-item-title">Alias</div>
+                        <div class="c-detail-item-value">{{customerDetails.company_name}}</div>
+                    </div>
+                </div>
 
-				<div class="c-detail-container">
-					<div class="c-detail-item">
-						<div class="c-detail-item-title">name</div>
-						<div class="c-detail-item-value">John Doe</div>
-					</div>
-					<div class="c-detail-item">
-						<div class="c-detail-item-title">Customer ID</div>
-						<div class="c-detail-item-value">FKDD5824SH</div>
-					</div>
-					<div class="c-detail-item">
-						<div class="c-detail-item-title">Company Name</div>
-						<div class="c-detail-item-value">BBC.corp</div>
-					</div>
-					<div class="c-detail-item">
-						<div class="c-detail-item-title">Company Type</div>
-						<div class="c-detail-item-value">Media</div>
-					</div>
-				</div>
+                <div class="tags">
+                    <div class="text-info"
+                         *ngFor="let tag of customerDetails.tags">
+                        {{ tag }}
+                    </div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
 
-				<div class="tags">
-					<span>Tags#</span>
-					<span>Tags2#</span>
-				</div>
-			</nb-card-body>
-		</div>
-	</nb-card>
+    <nb-card>
+        <nb-card-header>
+            <h6 class="text-primary">Customer details</h6>
+        </nb-card-header>
+        <div class="details-card">
+            <nb-card-body>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Billing Address</div>
+                    <div class="c-detail-item-value">{{customerDetails.billing_address.street}}</div>
+                    <div class="c-detail-item-value">{{customerDetails.billing_address.city}}</div>
+                    <div class="c-detail-item-value">{{customerDetails.billing_address.state}}</div>
+                    <div class="c-detail-item-value">{{customerDetails.billing_address.country}}</div>
+                    <div class="c-detail-item-value">{{customerDetails.billing_address.postcode}}</div>
+                </div>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Contact Info</div>
+                    <div class="c-detail-item-value">{{customerDetails.contact_info.email}}</div>
+                    <div class="c-detail-item-value">{{customerDetails.contact_info.contact_info}}</div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
 
-	<nb-card>
-		<div class="details-card">
-			<nb-card-body>
-				<h6>Service details</h6>
-				<div class="c-detail-item">
-					<div class="c-detail-item-title">Solar</div>
-					<div class="c-detail-item-value">Rajastan</div>
-				</div>
-				<div class="c-detail-item">
-					<div class="c-detail-item-title">Wind</div>
-					<div class="c-detail-item-value">Gujarath</div>
-				</div>
-			</nb-card-body>
-		</div>
-	</nb-card>
-
-	<nb-card>
-		<div class="details-card">
-			<nb-card-body>
-				<h6>Payment details</h6>
-			</nb-card-body>
-		</div>
-	</nb-card>
+    <nb-card>
+        <nb-card-header>
+            <h6 class="text-primary">Payment Details</h6>
+        </nb-card-header>
+        <div class="details-card">
+            <nb-card-body>
+                <div class="c-detail-item">
+                    <div class="c-detail-item-title text-primary">Preferred Method</div>
+                    <div class="c-detail-item-value">Direct Debit</div>
+                    <div class="c-detail-item-title text-primary">Preferred Date</div>
+                    <div class="c-detail-item-value">2020-xx-xx</div>
+                    <div class="c-detail-item-title text-primary">Fixed Direct Debit Amt</div>
+                    <div class="c-detail-item-value">£70.00</div>
+                    <div class="c-detail-item-title text-primary">Bank Name</div>
+                    <div class="c-detail-item-value">Barclays Bank Plc</div>
+                    <div class="c-detail-item-title text-primary">a/c number</div>
+                    <div class="c-detail-item-value">XXXXX-860</div>
+                </div>
+            </nb-card-body>
+        </div>
+    </nb-card>
 </div>
 
 <!-- <nb-card>
@@ -86,7 +146,7 @@
     </nb-list-item>
   </nb-list>
 </nb-card> -->
-<ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+<!--<ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>-->
 <div class="edit">
-	<!-- <router-outlet></router-outlet> -->
+    <!-- <router-outlet></router-outlet> -->
 </div>
